Spirit styling, fix overflow container

--- a/src/app/components/spirit-tree/spirit-tree.component.less
+++ b/src/app/components/spirit-tree/spirit-tree.component.less
@@ -12,6 +12,11 @@
   border-color: var(--color-border-highlight);
 }
 
+.spirit-tree-scroll {
+  // max-height: 600px;
+  overflow-y: auto;
+}
+
 /** Contains the 3 columns */
 .spirit-tree {
   display: inline-flex;
