--- a/src/app/components/spirit/spirit.component.less
+++ b/src/app/components/spirit/spirit.component.less
@@ -2,12 +2,14 @@
   background: var(--color-item-background);
   padding: var(--padding-content);
   border-radius: var(--border-radius-round);
+  width: min-content;
+  min-width: 100%;
 }
 
 .trees-wrapper {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: flex-end;
   gap: 10px;
   background: var(--color-background);
